# bird-focus-raw-selector

./: .gitignore  AGENT.md  LICENSE  README.md  portable_entry.py  pyproject.toml  requirements-cpu.txt  requirements-gpu-cu128.txt  requirements.txt
bird_select/: __main__.py  cli.py  detector.py  pipeline.py  raw_decoder.py  sharpness.py
docs/: FRIEND_QUICK_START_CN.md  GITHUB_RELEASE_GUIDE_CN.md  PARAMETERS_REFERENCE_CN.md  TROUBLESHOOTING_CN.md  VALIDATION_V1_2_CN.md
packaging/gpu_online/: README_FOR_FRIEND_CN.txt  Run_Copy_Fast_CPU.bat  Run_Copy_Fast_GPU.bat  Run_DryRun_Fast_CPU.bat  Run_DryRun_Fast_GPU.bat  run_selector_online.ps1
packaging/gpu_online/docs/: FRIEND_QUICK_START_CN.md  TROUBLESHOOTING_CN.md
packaging/portable/: README_FOR_FRIEND_CN.txt  Run_Copy_Fast_CPU.bat  Run_Copy_Fast_GPU.bat  Run_DryRun_Fast_CPU.bat  Run_DryRun_Fast_GPU.bat  run_selector.ps1
packaging/portable_cpu/: README_FOR_FRIEND_CN.txt  run_selector.ps1
packaging/portable_cpu/docs/: FRIEND_QUICK_START_CN.md  TROUBLESHOOTING_CN.md
scripts/: build_all_packages.ps1  build_portable.ps1  build_portable_cpu.ps1  build_portable_gpu.ps1  build_portable_gpu_online.ps1  check_release.ps1  package_source.ps1  publish_github_release.ps1
