[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bird-select"
version = "1.0.0"
description = "Local Windows CLI for selecting RAW photos with birds in focus."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "numpy>=1.26,<3.0",
    "opencv-python>=4.9,<5.0",
    "rawpy>=0.19,<1.0",
    "tqdm>=4.66,<5.0",
    "ultralytics>=8.2,<9.0",
    "lap>=0.5.12,<0.6",
]

[project.scripts]
bird-select = "bird_select.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["bird_select*"]
